--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,13 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: "Abel", sans-serif;
+  background-color: #eaeaea;
+  color: #333;
 }
 
 li {
@@ -15,12 +22,16 @@ a {
   color: #000;
 }
 
+img {
+  width: 100%;
+}
+
 /* HEADER */
 header {
   height: 100vh;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/pablo-merchan-montes-hyIE90CN6b0-unsplash.jpg");
-  background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/pablo-merchan-montes-hyIE90CN6b0-unsplash.jpg");
-  background-position: center;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/jonathan-borba-8l8Yl2ruUsg-unsplash.jpg");
+  background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/jonathan-borba-8l8Yl2ruUsg-unsplash.jpg");
+  background-position: right center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
@@ -66,6 +77,10 @@ header .nav-links {
 header .nav-links a {
   color: #ffc425;
   font-size: 1.4rem;
+}
+
+header .nav-links a:hover {
+  opacity: 0.7;
 }
 
 .hero-banner-title {
@@ -123,6 +138,44 @@ header .nav-links a {
 }
 
 /* MAIN */
+main {
+  max-width: 90%;
+  margin: 6rem auto;
+}
+
+main img {
+  height: 70%;
+}
+
+main .main-container {
+  max-width: 900px;
+  margin: auto;
+}
+
+main .main-container h3 {
+  font-size: 1.4rem;
+  margin: 1rem auto;
+  letter-spacing: 1px;
+}
+
+main .main-container p {
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+}
+
+@media (min-width: 758px) {
+  .main-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
+  .main-container img {
+    height: 80%;
+  }
+}
+
 @media (max-width: 600px) {
   header .nav-links {
     width: 100%;
