--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,6 +4,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: "Abel", sans-serif;
+  // background-color: #000;
+  // color: #eaeaea;
+  background-color: #eaeaea;
+  color: #333;
 }
 
 li {
@@ -15,19 +24,25 @@ a {
   color: #000;
 }
 
+img {
+  width: 100%;
+}
+
 /* HEADER */
 
 header {
   height: 100vh;
-  background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('/images/pablo-merchan-montes-hyIE90CN6b0-unsplash.jpg');
-  background-position: center;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("/images/jonathan-borba-8l8Yl2ruUsg-unsplash.jpg");
+  background-position: right center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
   color: #fff;
-
-
 
   .logo {
     text-align: center;
@@ -54,15 +69,15 @@ header {
     padding: 2rem;
     transition: 0.5s cubic-bezier(1, 0, 0, 1);
 
-
-
     a {
       color: #ffc425;
       font-size: 1.4rem;
 
+      &:hover {
+        opacity: 0.7;
+      }
     }
   }
-
 }
 
 .hero-banner-title {
@@ -97,7 +112,6 @@ header {
 
 .toggle .line1 {
   transform: rotateZ(-405deg) translate(-8px, 6px);
-
 }
 
 .toggle .line2 {
@@ -105,12 +119,51 @@ header {
 }
 
 .toggle .line3 {
-  transform: rotateZ(405deg) translate(-8px, -6px)
+  transform: rotateZ(405deg) translate(-8px, -6px);
 }
 
 /* MAIN */
 
-main {}
+main {
+  max-width: 90%;
+  margin: 6rem auto;
+
+  img {
+    height: 70%;
+  }
+
+  .main-container {
+    max-width: 900px;
+    margin: auto;
+
+    h3 {
+      font-size: 1.4rem;
+      margin: 1rem auto;
+      letter-spacing: 1px;
+    }
+
+    p {
+      font-size: 1.2rem;
+      letter-spacing: 2px;
+    }
+
+    // display: grid;
+    // grid-template-columns: 1fr 1fr;
+  }
+}
+
+// MEDIA QUERY
+
+@media (min-width: 758px) {
+  .main-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+    img {
+      height: 80%;
+    }
+  }
+}
 
 @media (max-width: 600px) {
   header {
