edited main content

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -32,11 +32,9 @@ img {
 
 header {
   height: 100vh;
-  background-image: linear-gradient(
-      to right bottom,
+  background-image: linear-gradient(to right bottom,
       rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
+      rgba(0, 0, 0, 0.5)),
     url("/images/jonathan-borba-8l8Yl2ruUsg-unsplash.jpg");
   background-position: right center;
   background-size: cover;
@@ -131,39 +129,54 @@ main {
   img {
     height: 70%;
   }
+}
 
-  .main-container {
-    max-width: 900px;
-    margin: auto;
+.main-container {
+  max-width: 900px;
+  margin: auto;
 
-    h3 {
-      font-size: 1.4rem;
-      margin: 1rem auto;
-      letter-spacing: 1px;
-    }
+  h3 {
+    font-size: 1.4rem;
+    margin: 1rem auto;
+    letter-spacing: 1px;
 
-    p {
-      font-size: 1.2rem;
-      letter-spacing: 2px;
-    }
-
-    // display: grid;
-    // grid-template-columns: 1fr 1fr;
   }
+
+  p {
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+  }
+
+  // display: grid;
+  // grid-template-columns: 1fr 1fr;
 }
 
 // MEDIA QUERY
 
-@media (min-width: 758px) {
+@media (min-width: 780px) {
+
   .main-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
+
+
+
     img {
-      height: 80%;
+      height: 85%;
     }
+
+    h3 {
+      font-size: 1.5rem;
+    }
+
+    p {
+      font-size: 1.2rem;
+    }
+
   }
 }
+
 
 @media (max-width: 600px) {
   header {
