--- a/styles/style.css
+++ b/styles/style.css
@@ -147,23 +147,23 @@ main img {
   height: 70%;
 }
 
-main .main-container {
+.main-container {
   max-width: 900px;
   margin: auto;
 }
 
-main .main-container h3 {
+.main-container h3 {
   font-size: 1.4rem;
   margin: 1rem auto;
   letter-spacing: 1px;
 }
 
-main .main-container p {
+.main-container p {
   font-size: 1.2rem;
   letter-spacing: 2px;
 }
 
-@media (min-width: 758px) {
+@media (min-width: 780px) {
   .main-container {
     display: -ms-grid;
     display: grid;
@@ -172,7 +172,13 @@ main .main-container p {
     grid-gap: 1rem;
   }
   .main-container img {
-    height: 80%;
+    height: 85%;
+  }
+  .main-container h3 {
+    font-size: 1.5rem;
+  }
+  .main-container p {
+    font-size: 1.2rem;
   }
 }
 
