--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -4,6 +4,7 @@ header {
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)),
     url("/images/jonathan-borba-8l8Yl2ruUsg-unsplash.jpg");
+  background-attachment: fixed;
   background-position: right center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -15,15 +16,15 @@ header {
     padding: 1rem;
 
     i {
-      color: #ffc425;
+      color: crimson;
     }
   }
 
   .nav-links {
     height: 10vh;
     width: 30%;
-    background-color: #ae0001;
-    position: absolute;
+    background-color: rgba(0, 0, 0, 0.9);
+    position: fixed;
     top: 0;
     left: 100%;
     height: 100vh;
@@ -34,9 +35,10 @@ header {
     align-items: center;
     padding: 2rem;
     transition: 0.5s cubic-bezier(1, 0, 0, 1);
+    z-index: 3;
 
     a {
-      color: #ffc425;
+      color: #fff;
       font-size: 1.4rem;
 
       &:hover {
@@ -56,15 +58,16 @@ header {
 }
 
 .hamburger {
-  position: absolute;
+  position: fixed;
   cursor: pointer;
   top: 5%;
   right: 5%;
+  z-index: 4;
 
   div {
     width: 25px;
     height: 3px;
-    background-color: #fff;
+    background-color: crimson;
     margin-bottom: 7px;
     transition: 0.2s ease-in;
   }
