--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -3,6 +3,8 @@
 main {
   max-width: 90%;
   margin: 6rem auto;
+  text-align: center;
+
 
   img {
     height: 70%;
@@ -12,6 +14,7 @@ main {
 .main-container {
   max-width: 900px;
   margin: auto;
+
 
   h3 {
     font-size: 1.4rem;
@@ -23,5 +26,6 @@ main {
     font-size: 1.2rem;
     letter-spacing: 2px;
   }
+
 
 }
