--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 main {
   max-width: 90%;
   margin: 6rem auto;
+  text-align: center;
 }
 
 main img {
@@ -28,6 +29,7 @@ header {
   height: 100vh;
   background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/jonathan-borba-8l8Yl2ruUsg-unsplash.jpg");
   background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/jonathan-borba-8l8Yl2ruUsg-unsplash.jpg");
+  background-attachment: fixed;
   background-position: right center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -41,14 +43,14 @@ header .logo {
 }
 
 header .logo i {
-  color: #ffc425;
+  color: crimson;
 }
 
 header .nav-links {
   height: 10vh;
   width: 30%;
-  background-color: #ae0001;
-  position: absolute;
+  background-color: rgba(0, 0, 0, 0.9);
+  position: fixed;
   top: 0;
   left: 100%;
   height: 100vh;
@@ -69,10 +71,11 @@ header .nav-links {
   padding: 2rem;
   -webkit-transition: 0.5s cubic-bezier(1, 0, 0, 1);
   transition: 0.5s cubic-bezier(1, 0, 0, 1);
+  z-index: 3;
 }
 
 header .nav-links a {
-  color: #ffc425;
+  color: #fff;
   font-size: 1.4rem;
 }
 
@@ -99,16 +102,17 @@ header .nav-links a:hover {
 }
 
 .hamburger {
-  position: absolute;
+  position: fixed;
   cursor: pointer;
   top: 5%;
   right: 5%;
+  z-index: 4;
 }
 
 .hamburger div {
   width: 25px;
   height: 3px;
-  background-color: #fff;
+  background-color: crimson;
   margin-bottom: 7px;
   -webkit-transition: 0.2s ease-in;
   transition: 0.2s ease-in;
@@ -156,6 +160,115 @@ header .nav-links a:hover {
   }
   .main-container p {
     font-size: 1.2rem;
+  }
+}
+
+section {
+  max-width: 90%;
+  margin: 6rem auto;
+}
+
+.recipe-container {
+  position: relative;
+}
+
+.recipe-container img {
+  height: 100%;
+}
+
+.recipe-title {
+  position: absolute;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  border: 2px solid #fff;
+  background-color: rgba(0, 0, 0, 0.9);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.recipe-title h3 {
+  font-size: 3rem;
+  padding: 2rem;
+}
+
+@media (min-width: 600px) {
+  .recipe-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem;
+  }
+}
+
+footer {
+  height: 60vh;
+  background: #111;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+footer .day {
+  margin-bottom: 0.5rem;
+}
+
+footer .social-title {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+}
+
+footer .social-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 250px;
+  padding: 0.4rem;
+  margin-bottom: 1rem;
+}
+
+footer .social-icons i {
+  cursor: pointer;
+}
+
+footer .hours {
+  border: 2px solid #fff;
+  padding: 0.7rem;
+}
+
+footer .hours span {
+  font-size: 1.3rem;
+}
+
+footer .hours h3 {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  letter-spacing: 2px;
+}
+
+@media (min-width: 700px) {
+  footer {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
