--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -23,14 +23,7 @@ section {
 
   h3 {
     font-size: 3rem;
-    padding: 2rem;
-  }
-}
-
-@media (min-width: 600px) {
-  .recipe-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1rem
+    padding: 1.8rem;
+    // display: none;
   }
 }
