--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -6,7 +6,16 @@
   }
 }
 
-@media (min-width: 780px) {
+@media (min-width: 750px) {
+  .recipe-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem
+  }
+
+}
+
+@media (min-width: 958px) {
   .main-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -18,10 +27,13 @@
 
     h3 {
       font-size: 1.5rem;
+
     }
 
     p {
       font-size: 1.2rem;
     }
   }
+
+
 }
