--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,6 +3,7 @@
 @import "./media";
 @import "./section";
 @import "./footer";
+@import "./mealfinder";
 
 
 
@@ -10,7 +11,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 body {
