--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -6,6 +6,16 @@
   }
 }
 
+
+@media (min-width: 800px) {
+  .menu-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
+
+}
+
 @media (min-width: 750px) {
   .recipe-container {
     display: grid;
