--- a/styles/style.css
+++ b/styles/style.css
@@ -144,6 +144,16 @@ header .nav-links a:hover {
   }
 }
 
+@media (min-width: 800px) {
+  .menu-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
+}
+
 @media (min-width: 750px) {
   .recipe-container {
     display: -ms-grid;
@@ -204,7 +214,7 @@ section {
 }
 
 footer {
-  height: 100vh;
+  height: 150vh;
   background: #111;
   color: #fff;
   display: -webkit-box;
@@ -238,9 +248,9 @@ footer .social-icons {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  width: 250px;
+  width: 80%;
   padding: 0.4rem;
-  margin-bottom: 2rem;
+  margin: auto 3rem;
 }
 
 footer .social-icons i {
@@ -248,8 +258,7 @@ footer .social-icons i {
 }
 
 footer .newsletter {
-  margin-bottom: 1.4rem;
-  margin: auto;
+  margin: 3rem 1.4rem;
   padding: 0.5rem;
 }
 
@@ -287,7 +296,7 @@ footer .hours h3 {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    height: 50vh;
+    height: 80vh;
   }
 }
 
@@ -489,6 +498,38 @@ input[type='text'] {
     height: 300px;
     width: 300px;
   }
+}
+
+.menu-container {
+  max-width: 90%;
+  margin: auto;
+  text-align: center;
+  padding: 0.5rem;
+}
+
+.menu-container p {
+  font-size: 1.6rem;
+}
+
+.menu-container img {
+  height: 400px;
+  margin-bottom: 0.5rem;
+}
+
+.menu-food {
+  margin-bottom: 2rem;
+  padding: 0.2rem;
+  width: 350px;
+  margin: auto;
+}
+
+.menu-food .food-price {
+  margin: 1rem auto;
+  font-size: 1.2rem;
+  background-color: #000;
+  width: 75px;
+  border: 2px solid crimson;
+  color: #fff;
 }
 
 * {
