--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,10 +1,8 @@
 header {
   height: 100vh;
-  background-image: linear-gradient(
-      to right bottom,
+  background-image: linear-gradient(to right bottom,
       rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
+      rgba(0, 0, 0, 0.5)),
     url("../images/header-banner.jpg");
   background-attachment: fixed;
   background-position: right center;
