made footer responsive

--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -15,7 +15,6 @@
   }
 }
 
-
 .menu-food {
   margin-bottom: 2rem;
   padding: 0.2rem;
@@ -35,7 +34,7 @@
 @media (min-width: 900px) {
   .menu-container {
     img {
-      width: 60%
+      width: 70%;
     }
   }
 }
