--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -16,15 +16,6 @@
 
 }
 
-@media (min-width: 750px) {
-  .recipe-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1rem
-  }
-
-}
-
 
 @media (min-width: 958px) {
   .main-container {
@@ -45,6 +36,11 @@
       font-size: 1.2rem;
     }
 
+
+  }
+
+  .menu-container {
+    grid-template-columns: repeat(3, 1fr);
 
   }
 
