--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -2,39 +2,45 @@
   max-width: 90%;
   margin: auto;
   text-align: center;
-  padding: 0.5rem;
+  color: #000;
 
   p {
     font-size: 1.6rem;
   }
 
   img {
-    width: 90%;
     height: 300px;
-    margin-bottom: 0.5rem;
+
   }
 }
 
-.menu-food {
+.menu-card {
   margin-bottom: 2rem;
-  padding: 0.2rem;
+}
+
+.menu-food {
+  padding: 0.2rem auto;
   max-width: 90%;
   margin: auto;
 
   .food-price {
     margin: 1rem auto;
+    padding: 0.2rem;
     font-size: 1.2rem;
     background-color: #000;
     width: 75px;
     border: 2px solid crimson;
     color: #fff;
   }
+
+
 }
 
 @media (min-width: 900px) {
   .menu-container {
     img {
-      width: 70%;
+      height: 350px;
     }
+
   }
 }
