--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -1,29 +1,37 @@
-section {
-  max-width: 90%;
-  margin: 6rem auto;
-}
-
-.recipe-container {
-  position: relative;
-
-  img {
-    height: 100%;
+  section {
+    max-width: 90%;
+    margin: 6rem auto;
   }
-}
 
-.recipe-title {
-  position: absolute;
-  color: #fff;
-  top: 50%;
-  left: 50%;
-  text-align: center;
-  border: 2px solid #fff;
-  background-color: rgba(0, 0, 0, 0.9);
-  transform: translate(-50%, -50%);
+  .recipe-container {
+    position: relative;
 
-  h3 {
-    font-size: 3rem;
-    padding: 1.8rem;
-    // display: none;
+    img {
+      height: 100%;
+    }
   }
-}
+
+  .recipe-title {
+    position: absolute;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    border: 2px solid #fff;
+    background-color: rgba(0, 0, 0, 0.9);
+    transform: translate(-50%, -50%);
+
+    h3 {
+      font-size: 3rem;
+      padding: 1.8rem;
+    }
+  }
+
+  @media (min-width: 750px) {
+    .recipe-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 1rem
+    }
+
+  }
