--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -5,10 +5,6 @@
 
   .recipe-container {
     position: relative;
-
-    img {
-      height: 100%;
-    }
   }
 
   .recipe-title {
@@ -31,7 +27,7 @@
     .recipe-container {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-gap: 1rem
+      grid-gap: 1rem;
     }
 
   }
