--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -43,6 +43,7 @@ footer {
       margin-bottom: 1rem;
       padding: 0.5rem;
       text-align: center;
+      border: 2px solid crimson
     }
   }
 
