--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -36,6 +36,22 @@
 
 }
 
+.menu-title {
+  text-align: center;
+  font-size: 2rem;
+  margin: 2rem auto;
+
+  h3 {
+    display: inline-block;
+    background-color: #000;
+    padding: 0.2rem;
+    color: #fff;
+    border: 2px solid crimson;
+    letter-spacing: 1px;
+  }
+
+}
+
 @media (min-width: 900px) {
   .menu-container {
     img {
