--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,16 @@ header {
   color: #fff;
 }
 
+header small {
+  font-size: 1.3rem;
+}
+
+header p {
+  padding: 0.5rem;
+  line-height: 2.2rem;
+  margin: 0.5rem auto;
+}
+
 header .logo {
   text-align: center;
   padding: 1rem;
@@ -271,6 +281,7 @@ footer .newsletter input {
   margin-bottom: 1rem;
   padding: 0.5rem;
   text-align: center;
+  border: 2px solid crimson;
 }
 
 footer .hours {
@@ -534,6 +545,21 @@ input[type='text'] {
   color: #fff;
 }
 
+.menu-title {
+  text-align: center;
+  font-size: 2rem;
+  margin: 2rem auto;
+}
+
+.menu-title h3 {
+  display: inline-block;
+  background-color: #000;
+  padding: 0.2rem;
+  color: #fff;
+  border: 2px solid crimson;
+  letter-spacing: 1px;
+}
+
 @media (min-width: 900px) {
   .menu-container img {
     height: 350px;
@@ -545,6 +571,7 @@ input[type='text'] {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
